--- a/app/scss/globals/_fonts.scss
+++ b/app/scss/globals/_fonts.scss
@@ -1,6 +1,6 @@
-//@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap');
 
-@font-face {
+/*@font-face {
     font-family: 'Be Vietnam Pro';
     src: url('../../../assets/Be_Vietnam_Pro/BeVietnamPro-Regular.ttf');
     font-weight: 400;
@@ -16,6 +16,6 @@
     font-family: 'Be Vietnam Pro';
     src: url('../../../assets/Be_Vietnam_Pro/BeVietnamPro-Bold.ttf');
     font-weight: bold;
-}
+}*/
 
 $primaryFont: 'Be Vietnam Pro', sans-serif;
